--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>spring5-jokes-app-v2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring5-jokes-app-v2</name>
-	<description>Chuck Norris Jokes Application</description>
+	<description>Chuck Norris Jokes</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -30,6 +30,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>guru.springframework</groupId>
+			<artifactId>chuck-norris-for-actuator</artifactId>
+			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
 
